<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".LoginActivity">

  <!-- Login progress -->
  <LinearLayout
      android:id="@+id/login_status"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/login_status_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_authenticating"/>
  </LinearLayout>

  <!-- Login form -->
  <ScrollView
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        style="@style/LoginFormContainer"
        android:orientation="vertical">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:editable="false"/>

        <Button
            android:id="@+id/select_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_select_google_account"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_gravity="right"/>

      </LinearLayout>

      <Button
          android:id="@+id/verify_authorization_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:text="@string/button_verify_authorization"
          android:enabled="true"
          android:paddingLeft="32dp"
          android:paddingRight="32dp"
          android:layout_gravity="right"/>

      <EditText
          android:id="@+id/project_id"
          android:singleLine="true"
          android:maxLines="1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:hint="@string/prompt_project_id"
          android:inputType="textAutoComplete"
          android:imeActionId="@+id/login"
          android:imeOptions="actionUnspecified"/>

      <Button
          android:id="@+id/view_resources_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/button_view_resources"
          android:enabled="false"
          android:paddingLeft="32dp"
          android:paddingRight="32dp"
          android:layout_gravity="right"/>

    </LinearLayout>

  </ScrollView>
</merge>
